# statepace

./: .gitignore  CLAUDE.md  LICENSE  README.md  conftest.py  environment.yml  pyproject.toml
.claude/agents/: focused-engineer.md  identifiability-auditor.md  master-architect.md  master-statistician.md  product-manager.md  senior-scientist.md  sports-science-advisor.md
docs/: README.md  architecture_map.md  channel_assignment.md  conventions.md  dag_buildup.md  data_contract.md  identifiability_baseline.md  theoretical_framework.md
docs/decisions/: 0001-shared-parameters-per-athlete-Z.md  0002-state-estimator-cohort-fit-channels-infer.md  0003-cohort-assignment-stratified-by-sex-and-volume.md  0004-prediction-metric-and-tau-horizons.md  0005-x-single-node-trajectory-with-functionals.md  0006-m6-joint-mle-kalman-first-state-estimator.md
docs/plans/: README.md  m5-linear-gaussian-transitions.md  m6-state-estimator.md  post-scaffold-sequencing.md
docs/reference_impls/: README.md  joint-mle-kalman.md  linear-gaussian-retrospective.md  linear-gaussian.md  riegel-score-hrstep.md
docs/scripts/: make_dag.py  make_dag_buildup.py
run_modeling/: __init__.py  _constants.py
statepace/: __init__.py  channels.py  filter.py  forward.py  observation.py  predict.py  transitions.py
statepace/evaluation/: __init__.py  harness.py
tests/: README.md  test_channels.py  test_evaluation_harness.py  test_filter_joint_mle_kalman.py  test_observation_riegel.py  test_smoke.py  test_transitions_linear_gaussian.py
tests/fixtures/: __init__.py  synthetic.py
(+10 files in other folders)
